fixed layout issue with header. added margin under

--- a/src/style.css
+++ b/src/style.css
@@ -395,7 +395,7 @@ a {
   width: 100%;
   margin: 0 auto;
   /* background: red; */
-  padding: 0 2px 5px 2px;
+  padding: 0px 1px 5px 1px;
 }
 
 h1, h2 {
@@ -405,7 +405,7 @@ h1, h2 {
 
 header {
   /* background: skyblue; */
-  margin: 0px 0px 5px 0px;
+  margin: 0px 0px 10px 0px;
 }
 
 main {
